@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2005 The Apache Software Foundation.
+ * Copyright 2002-2010 The Apache Software Foundation.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -148,3 +148,14 @@ void XSECPlatformUtils::registerAlgorithmHandler(
 
 }
 
+void XSECPlatformUtils::whitelistAlgorithm(const XMLCh* uri) {
+
+    internalMapper->whitelistAlgorithm(uri);
+
+}
+
+void XSECPlatformUtils::blacklistAlgorithm(const XMLCh* uri) {
+
+    internalMapper->blacklistAlgorithm(uri);
+
+}
