@@ -1,6 +1,9 @@
 Changes since 1.5.1
 =====================================
 * Fix for bug#48676 in RetrievalMethod handler (SC)
+* Fix for bug#45867, support for >1 CRL per KeyInfo (SC)
+* Expose algorithm URI on Signature and Reference objects (SC)
+* White/blacklisting of otherwise registered algorithms (SC)
 
 Changes between 1.5 and 1.5.1
 =====================================
